fixup! DX-70, 71. Добавлен API Client для отправки запросов на ai-service, модель CRUD и REST